fix some dark mode issues and bump font sizes

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -20,19 +20,15 @@ a {
   }
 
   &:hover {
-    @apply text-gray-900 underline;
-
-    @screen dark-mode {
-      @apply text-gray-100;
-    }
+    @apply underline;
   }
 }
 
 h1 {
-  @apply text-xl leading-tight mb-4;
+  @apply text-2xl leading-tight mb-4;
 
   @screen md {
-    @apply text-3xl;
+    @apply text-4xl;
   }
 
   span {
@@ -41,24 +37,24 @@ h1 {
 }
 
 h2 {
-  @apply text-xl font-bold;
+  @apply text-2xl font-bold;
+
+  @screen md {
+    @apply text-3xl;
+  }
 }
 
 h3 {
-  @apply text-lg font-bold;
+  @apply text-xl font-bold;
+
+  @screen md {
+    @apply text-2xl;
+  }
 }
 
 .nuxt-content {
-  a {
-    @apply .underline;
-
-    &:hover {
-      @apply .no-underline;
-    }
-  }
-
-  > *:not(:last-child) {
-    @apply mb-4;
+  * + * {
+    @apply mt-6;
   }
 
   img {
@@ -92,11 +88,19 @@ h3 {
   }
 
   .nuxt-content-highlight {
-    @apply bg-gray-200 font-mono whitespace-pre break-normal leading-normal rounded p-4;
+    @apply bg-gray-200 font-mono whitespace-pre break-normal leading-normal rounded p-4 my-10;
+
+    @screen dark-mode {
+      @apply bg-gray-800;
+    }
   }
 
   .filename {
     @apply block text-gray-600 italic mb-4;
+
+    @screen dark-mode {
+      @apply text-gray-400;
+    }
 
     &::before {
       content: "//";
@@ -111,10 +115,6 @@ h3 {
     word-wrap: normal;
     tab-size: 2;
     hyphens: none;
-
-    @screen dark-mode {
-      @apply bg-gray-700;
-    }
   }
 
   pre[class*="language-"]::-moz-selection,
@@ -125,29 +125,19 @@ h3 {
   pre[class*="language-"] ::selection,
   code[class*="language-"]::selection,
   code[class*="language-"] ::selection {
-    @apply bg-gray-100;
     text-shadow: none;
-
-    @screen dark-mode {
-      @apply bg-gray-900;
-    }
   }
 
   pre[class*="language-"] {
     @apply overflow-auto;
   }
 
-  :not(pre) > code[class*="language-"],
-  pre[class*="language-"] {
-    @apply bg-gray-200;
+  :not(pre) > code {
+    @apply rounded whitespace-normal bg-gray-200 font-mono break-normal px-1;
 
     @screen dark-mode {
-      @apply bg-gray-700;
+      @apply bg-gray-800;
     }
-  }
-
-  :not(pre) > code {
-    @apply rounded whitespace-normal bg-gray-200 font-mono break-normal leading-normal;
   }
 
   .token.comment,
@@ -159,6 +149,10 @@ h3 {
 
   .token.punctuation {
     @apply text-gray-700;
+
+    @screen dark-mode {
+      @apply text-gray-500;
+    }
   }
 
   .token.property,
@@ -169,6 +163,10 @@ h3 {
   .token.symbol,
   .token.deleted {
     @apply text-pink-500;
+
+    @screen dark-mode {
+      @apply text-pink-300;
+    }
   }
 
   .token.selector,
@@ -178,6 +176,10 @@ h3 {
   .token.builtin,
   .token.inserted {
     @apply text-green-500;
+
+    @screen dark-mode {
+      @apply text-green-300;
+    }
   }
 
   .token.operator,
@@ -197,11 +199,19 @@ h3 {
   .token.attr-value + .token.attr-name,
   .token.keyword {
     @apply text-blue-500;
+
+    @screen dark-mode {
+      @apply text-blue-300;
+    }
   }
 
   .token.function,
   .token.class-name {
     @apply text-pink-500;
+
+    @screen dark-mode {
+      @apply text-pink-300;
+    }
   }
 
   .token.regex,
